--- a/Credit Card Transactions Fraud Detection.ipynb
+++ b/Credit Card Transactions Fraud Detection.ipynb
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6c51348c",
+   "id": "c26c24f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn import neighbors\n",
     "from sklearn import linear_model\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -58,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fe60db3e",
+   "id": "9f9f52a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1939,7 +1940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1817959",
+   "id": "8a0834e7",
    "metadata": {},
    "source": [
     "# Defining Features and Labels"
@@ -1959,6 +1960,14 @@
     "label_y = df3.reset_index(drop='index')['is_fraud']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(feature_X, label_y, stratify=label_y, test_size = 0.3, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "945a0e02",
+   "metadata": {},
+   "source": [
+    "# Random Forest"
    ]
   },
   {
@@ -2001,6 +2010,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "75374967",
+   "metadata": {},
+   "source": [
+    "# Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0eca8a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(max_depth=3, random_state=42)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a Decision Tree Classifier\n",
+    "\n",
+    "dt_model = DecisionTreeClassifier(criterion='gini', max_depth=3, random_state=42)\n",
+    "dt_model.fit(feature_X, label_y)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7052006f",
    "metadata": {},
    "source": [
@@ -2009,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "213eee97",
    "metadata": {},
    "outputs": [],
@@ -2023,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "15494e64",
    "metadata": {},
    "outputs": [
@@ -2037,7 +2078,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2048,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "049d07e5",
    "metadata": {},
    "outputs": [],
@@ -2061,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "595b8b95",
    "metadata": {},
    "outputs": [],
@@ -2081,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "dd3234fc",
    "metadata": {},
    "outputs": [
@@ -2468,7 +2509,7 @@
        "[555719 rows x 25 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2479,7 +2520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "1a22b357",
    "metadata": {},
    "outputs": [],
@@ -2494,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "ee5a9fd0",
    "metadata": {},
    "outputs": [
@@ -2637,7 +2678,7 @@
        "[555719 rows x 5 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2648,7 +2689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "913bfa9f",
    "metadata": {},
    "outputs": [],
@@ -2660,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "5e161bcf",
    "metadata": {},
    "outputs": [
@@ -3060,7 +3101,7 @@
        "[555719 rows x 22 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3071,7 +3112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "1201be15",
    "metadata": {},
    "outputs": [
@@ -3081,7 +3122,7 @@
        "0.9954797298634742"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3103,6 +3144,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8864e0c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9971946253412246"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Decision Tree\n",
+    "\n",
+    "# Predict on the test set\n",
+    "y_pred = dt_model.predict(test_X)\n",
+    "\n",
+    "accuracy = accuracy_score(test_y, y_pred)\n",
+    "accuracy\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8bc16b79",
    "metadata": {},
@@ -3112,7 +3180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "678fa776",
    "metadata": {},
    "outputs": [],
@@ -3122,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "bb9f587d",
    "metadata": {},
    "outputs": [
@@ -3134,7 +3202,7 @@
        "Name: predictions, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3145,7 +3213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "25d4086b",
    "metadata": {},
    "outputs": [
@@ -3168,7 +3236,7 @@
        " 2145)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3189,7 +3257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "c4f04249",
    "metadata": {},
    "outputs": [
@@ -3199,7 +3267,7 @@
        "(2145, 367)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3218,7 +3286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "d1b477fd",
    "metadata": {},
    "outputs": [
@@ -3258,7 +3326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "872ab6e7",
    "metadata": {},
    "outputs": [
@@ -3283,7 +3351,7 @@
        "                   random_state=42)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3297,7 +3365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "74062d46",
    "metadata": {},
    "outputs": [
@@ -3307,7 +3375,7 @@
        "0.905286664663256"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3333,7 +3401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "af92cca7",
    "metadata": {},
    "outputs": [
@@ -3365,7 +3433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "id": "9812d90c",
    "metadata": {},
    "outputs": [
@@ -3375,7 +3443,7 @@
        "0.9993018054088487"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3398,7 +3466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "id": "f12aae29",
    "metadata": {},
    "outputs": [
